Split the strtable and head R displays

--- a/index.html
+++ b/index.html
@@ -792,10 +792,10 @@ hljs.initHighlightingOnLoad();
 
 </section>
 <section data-transition="linear" data-transition-speed="default">
-<h3>Project Description</h3>
+<h3>Project Description (1)</h3>
 <div class="slideContent" >
 <p>This project is an extension of my previous <em>Leaflet</em> projects and uses an older dataset for <a href="https://gist.github.com/dankohn/09e5446feb4a8faea24f">Starbucks Locations in the USA</a>. The dataset was
-modified by adding a header row so <em>Leaflet</em> would recognize the latitude and longitude columns. The data classes and the first five rows, are shown below:</p>
+modified by adding a header row so <em>Leaflet</em> would recognize the latitude and longitude columns. The data classes are shown below an the first five rows, are shown on the following slide.</p>
 
 <pre><code class="r">kable(strtable(df))
 </code></pre>
@@ -834,6 +834,12 @@ modified by adding a header row so <em>Leaflet</em> would recognize the latitude
 </tr>
 </tbody></table>
 
+</div>
+
+</section>
+<section data-transition="linear" data-transition-speed="default">
+<h3>Project Description (2)</h3>
+<div class="slideContent" >
 <pre><code class="r">kable(head(df,5))
 </code></pre>
 
